<resources>
    <string name="app_name">Delizza</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_john">Hello, John</string>
    <string name="pizza_description">This is the traditional cheesy margheriita\n with cheesy tomato toppings</string>
    <string name="select_crust">Select Crust</string>
    <string name="select_size">Select Size</string>
    <string name="hand_tossed">Hand-tossed</string>
    <string name="cheese_burst">Cheese Burst</string>
    <string name="regular">Regular</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
</resources>